--- a/themes/hugo-redlounge/static/css/redlounge.css
+++ b/themes/hugo-redlounge/static/css/redlounge.css
@@ -15,6 +15,9 @@ pre {
 p {
 	color: #2d303b;
 }
+img {
+	max-width: 100%;
+}
 a {
   -o-transition:.5s;
   -ms-transition:.5s;
@@ -107,6 +110,9 @@ h2.brand-tagline {
 .sidebar a:hover {
 	color:#E54028;
 }
+.social-buttons a{
+    color: #E54028;
+}
 
 /* Nav */
 .nav-list {
@@ -155,8 +161,14 @@ h2.brand-tagline {
 }
 
 /* Posts */
+h1 {
+	text-decoration: none;
+	line-height: 1.3;
+	color: #111111;
+}
 h1.post-title a {
 	text-decoration: none;
+	line-height: 1.3;
 	color: #111111;
 }
 .post-date {
@@ -217,6 +229,18 @@ a.post-author {
 .post h3.post-subtitle {
 	font-weight: 200;
 	color: #999;
+}
+ul {
+    padding: 0 0 0 10px;
+    margin: 0.5rem;
+}
+ul ul {
+ margin: 0.5rem 0 0;
+}
+table th, 
+table td {
+    padding: 5px;
+    border: solid 1px black;
 }
 .post table {
     margin-bottom: 1.75rem;
